# cortexmd

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  dream-restore-manifest.txt  package-lock.json  package.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  contract.yml  release.yml
contract/: README.md  code-ingest-payload.schema.json  symbol-id.md  wire-format.md
contract/fixtures/: README.md  expected-symbol-ids.json
contract/fixtures/sample-repo/src/: Greeter.java  greeter.cpp  greeter.kt  greeter.php  greeter.rb  helper.rs  lib.rs  math.go  math.ts  util.py  util.ts
crates/cli/: Cargo.toml  README.md
crates/cli/hooks/: README.md  _mcp_rest.mjs  code_nav_hint_hook.mjs  code_nav_pretool_hook.mjs  diary_stop_hook.mjs  posttooluse_hook.mjs  precompact-hook.sh  precompact_diary_hook.mjs  pretooluse_hook.mjs  stop-hook.sh  userprompt_hook.mjs  wakeup_directive_hook.mjs
crates/cli/src/: auth.rs  cli.rs  contract.rs  git.rs  indexer.rs  init.rs  inspect.rs  lib.rs  local_db.rs  main.rs  mcp.rs  oauth.rs  parser.rs  payload.rs  rewrite.rs  simhash.rs  sync.rs  walker.rs  workspace.rs
crates/cli/src/lang/: c.rs  cpp.rs  dart.rs  go.rs  java.rs  kotlin.rs  mod.rs  php.rs  python.rs  ruby.rs  rust_lang.rs  ts_js.rs
crates/cli/tests/: auth_smoke.rs  lang_smoke.rs
demo/: README.md  gen-sources.mjs  run.sh  screenshot.mjs  seed.mjs
demo/brain-seed/Ops/Agents/: claude-code.md  codex.md  cursor.md
demo/brain-seed/Ops/Skills/: code-review.md  session-recap.md
demo/brain-seed/Ops/Teams/: search-team.md
demo/sources/Archive/: Old BM25 Tuning.md
demo/sources/CRM/People/: Ada Lovelace.md  Alan Turing.md  Barbara Liskov.md  Donald Knuth.md  Edsger Dijkstra.md  Grace Hopper.md  Katherine Johnson.md  Margaret Hamilton.md
demo/sources/Concepts/: Auto-Archival.md  BM25.md  Code Navigation.md  Dream Cycle.md  Embeddings.md  Entity Detection.md  HNSW Index.md  Heat Decay.md  Hybrid Retrieval.md  Knowledge Graph.md  Memory Temperature.md  Model Context Protocol.md  Reciprocal Rank Fusion.md  Reranking.md  Shared Memory.md  Single-Writer Vault.md  Symbol IDs.md  Vector Search.md
demo/sources/Decisions/: Adopt Hybrid Retrieval.md  Adopt Symbol IDs.md  Heat Decay Half-Life.md  One Writer Brain Vault.md  Rerank Top-50 Only.md
demo/sources/Inbox/: Scratch.md
demo/sources/Maps/: Memory MOC.md  Search MOC.md
demo/sources/Meetings/: 2026-05-28 Lifecycle Review.md  2026-05-30 Mesh Kickoff.md  2026-06-01 Search Sync.md  2026-06-02 Eng Staff.md
demo/sources/Projects/: Agent Mesh.md  Code Atlas.md  Eval Harness.md  Helios Search.md  Memory Lifecycle.md
docs/: ARCHITECTURE.md  BENCHMARKS.md  GAPS-IAI-PME.md  IAI-GAP-IMPLEMENTATION-PLAN.md  MEMPALACE-PARITY.md  brain-vault.md  deploy-http.md  deploy-local.md  hooks.md  migrating.md  transports.md
plugin/cortexmd/: .mcp.json  README.md
plugin/cortexmd/.claude-plugin/: plugin.json
plugin/cortexmd/hooks/: hooks.json
plugin/cortexmd/skills/cortexmd/: SKILL.md
