# cortexmd-cli (produces the `cortexmd` binary)
#
# Resolved dependency versions (cargo's Rust 1.93.0 selection):
#   tree-sitter            = 0.26.8
#   tree-sitter-typescript = 0.23.2  (older — uses tree-sitter-language 0.1)
#   tree-sitter-javascript = 0.25.0
#   tree-sitter-python     = 0.25.0
#   tree-sitter-rust       = 0.24.2
#   tree-sitter-go         = 0.25.0
#   tree-sitter-cpp        = 0.23.4
#
# The grammars expose `LANGUAGE` (or `LANGUAGE_TYPESCRIPT`/`LANGUAGE_TSX`) as a
# `tree_sitter_language::LanguageFn`, which converts into `tree_sitter::Language`
# via `Into`. The 0.23 typescript grammar is one minor behind the others but
# still produces a compatible Language for the 0.26 core; no peer-dep escape
# hatch was needed.

[package]
name = "cortexmd-cli"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "cortexmd CLI: indexes repos, queries the symbol DB, drives session hooks, and bootstraps Claude Code/Codex/Cursor integrations."
repository = "https://github.com/Leicas/cortexmd"

[[bin]]
name = "cortexmd"
path = "src/main.rs"

# Deprecated alias kept for one release. Prints a deprecation warning and
# delegates to the same entry point as `cortexmd`.
[[bin]]
name = "obsidian-mcp-client"
path = "src/bin/obsidian-mcp-client.rs"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive", "env"] }
dirs = "6.0.0"
glob = "0.3.3"
hex = "0.4.3"
hostname = "0.4.2"
ignore = "0.4.25"
rand = "0.10.1"
rpassword = "7.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha1 = "0.11.0"
sha2 = "0.11.0"
tiny_http = "0.12.0"
toml = "1.1.2"
tree-sitter = "0.26.8"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"
tree-sitter-cpp = "0.23.4"
rusqlite = { version = "0.33.0", features = ["bundled"] }
ureq = { version = "3.3.0", features = ["json", "native-tls"] }
urlencoding = "2.1.3"
webbrowser = "1.2.1"
